build: Configure static analysis and copyright headers
This commit introduces configuration for static analysis and license header enforcement.

Changes include:
- Added a comprehensive `detekt.yml` configuration file to define Kotlin linting rules, including complexity, naming, style, and Compose-specific checks.
- Created Spotless copyright templates for `.kt`, `.kts`, and `.xml` files to ensure consistent licensing across the project.
- Updated the `pr-check.yml` GitHub Actions workflow to provide a default Java version (17) for the static analysis check.
- Added an empty `.editorconfig` file within the Detekt configuration directory.

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -33,4 +33,4 @@ jobs:
       - name: Static Analysis Check
         uses: openMF/mifos-x-actionhub-static-analysis-check@v1.0.1
         with:
-          java-version: ${{ inputs.java-version }}
+          java-version: ${{ inputs.java-version || '17' }}
