--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -34,3 +34,4 @@ jobs:
         uses: openMF/mifos-x-actionhub-static-analysis-check@v1.0.1
         with:
           java-version: ${{ inputs.java-version || '17' }}
+          gradle-args: --info
