--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.12.0"
+agp = "8.12.3"
 kotlin = "2.2.20"
 android-minSdk = "24"
 android-compileSdk = "36"
@@ -21,26 +21,24 @@ composeLifecycle = "2.9.6"
 composeNavigation = "2.9.1"
 koin = "4.1.1"
 koinAnnotationsVersion = "2.3.1"
-kotlinStdlib = "2.2.20"
 runner = "1.7.0"
 core = "1.7.0"
 junit = "1.3.0"
-androidxComposeUi = "1.10.0"
+androidxComposeUi = "1.10.1"
 lifecycleRuntimeKtx = "2.10.0"
-composeBom = "2025.12.01"
+composeBom = "2026.01.00"
 coreKtx = "1.17.0"
 junitVersion = "4.13.2"
 espressoCore = "3.7.0"
 
 dependencyGuard = "0.5.0"
-spotlessVersion = "6.25.0"
-detekt = "1.23.7"
+spotlessVersion = "8.1.0"
+detekt = "1.23.8"
 twitter-detekt-compose = "0.0.26"
-ktlint = "12.1.1"
+ktlint = "14.0.1"
 
-androidGradlePlugin = "8.7.3"
-androidTools = "31.8.0"
-androidDesugarJdkLibs = "2.1.4"
+androidTools = "32.0.0"
+androidDesugarJdkLibs = "2.1.5"
 
 [libraries]
 
@@ -52,7 +50,7 @@ androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "u
 android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
 
 
-android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
+android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
 android-tools-common = { group = "com.android.tools", name = "common", version.ref = "androidTools" }
 
 compose-gradlePlugin = { group = "org.jetbrains.kotlin", name = "compose-compiler-gradle-plugin", version.ref = "kotlin" }
@@ -103,7 +101,7 @@ twitter-detekt-compose = { group = "com.twitter.compose.rules", name = "detekt",
 kotlinx-coroutinesSwing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
-kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlinStdlib" }
+kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
 runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
 core = { group = "androidx.test", name = "core", version.ref = "core" }
 junit = { group = "androidx.test.ext", name = "junit", version.ref = "junit" }
